# quick_wfc

./: CMakeLists.txt  WFC.cpp  WFC_Input.cpp  WFC_Input.h  WFC_Set.cpp  input.wfcin  main.cpp  wfc.in
inspiration/: old_main.cpp
oldcode/: WFC.h  WFC_Input.cpp  WFC_Input.h  WFC_Set.h
